--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "learning",
   "version": "1.0.0",
-  "description": "",
-  "main": "hello-world.js",
+  "description": "A simple Express.js application",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
